Fix empty Dockerfile

--- a/backend/ewaste/Dockerfile
+++ b/backend/ewaste/Dockerfile
@@ -2,10 +2,13 @@
 FROM gradle:jdk17-alpine AS build
 WORKDIR /app
 COPY . .
+
+# FIX: Grant permission to the gradle wrapper script
+RUN chmod +x ./gradlew
+
 RUN ./gradlew clean build -x test --no-daemon
 
 # Stage 2: Run the application
-# CHANGED: Use eclipse-temurin instead of openjdk
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
 COPY --from=build /app/build/libs/*.jar app.jar
